Fix double scroll-bar and messages overflowing

--- a/public/chat/styles.css
+++ b/public/chat/styles.css
@@ -1,7 +1,7 @@
 #app-container {
     display: flex;
     flex-direction: row;
-    height: 100%;
+    height: calc(100% - var(--nav-height));
     width: 100%;
 }
 
@@ -11,6 +11,8 @@
 }
 
 #chat-container {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: 100%;
     background-color: var(--chat-bg);
@@ -19,14 +21,10 @@
     box-sizing: border-box;
 }
 
-.messages {
-    position: relative;
-    left: auto;
-    right: auto;
+#messages-container {
     margin: 0 auto;
-    width: 60%;
-    height: 100%;
-    padding: 10px 1rem 70px 1rem;
+    width: 100%;
+    padding: 1rem 20%;
     overflow-y: auto;
     display: flex;
     flex-direction: column;
