--- a/public/styles.css
+++ b/public/styles.css
@@ -8,7 +8,8 @@
     --chat-bg: #fff;
     --main-color: #074b9f;
     --secondary-color: #0058b9;
-    --line-color: #ddd
+    --line-color: #ddd;
+    --nav-height: 70px;
 }
 
 body {
@@ -27,7 +28,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 70px;
+    height: var(--nav-height);
     padding: .2rem .7rem;
     background-color: #fff;
     border-bottom: 2px solid var(--main-color);
